--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
 <link rel="stylesheet" type="text/css" href="estilos.css">
@@ -25,7 +25,7 @@
 
 		<a href="Blog.html" target="_blank" rel="noreferrer">Blog</a>
 
-		<a href="Contactos.html" target="_blank" rel="noreferrer">Contactos</a>
+        <a href="Contactos.html" target="_blank" rel="noreferrer">Contactos</a>
 	</nav>
 	</div>
 
@@ -39,11 +39,11 @@
 	</header>
 
 
-<section class="contenedor seccion">
+<section class="Contenido seccion">
 
 	<H2 class="fw-300 centrar-texto">Más sobre nosotros</H2>
 
-	<div class="iconos-nosotros">
+	<div class="Contenido iconos-nosotros">
 
 	<div class="icono">
 		<img src="icono1.svg">
@@ -65,104 +65,159 @@
 </div>
 </section>
 
-<section class="segunda seccion">
-	<H2 class="fw-300 centrar-texto">Casas y Depas en Venta</H2>
-	<div class="anuncios">
-	<div class="anuncio">
-		<p><img src="anuncio1.jpg" width="316" height="210"></p>
-		<b>Casa de Lujo en el Lago</b>
-		<p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
-		<p class="costo">$2,000,000</p>
+<section class="seccion contenedor">
+        <h2 class="fw-300 centrar-texto">Casas y Depas en Venta</h2>
 
-		<div class="icono-anuncio">
-			<img src="icono_wc.svg" alt="icono_wc">3
-			<img src="icono_estacionamiento.svg" alt="icono_estacionamiento">3
-			<img src="icono_dormitorio.svg" alt="icono_dormitorio">2
-		</div>
-		<a class="botones" href="#">VER PROPIEDAD</a>
-		
-	</div>
+        <div class="Contenido contenedor-anuncios">
+            <div class="anuncio">
+                <img src="anuncio1.jpg">
+            <div class="contenido-anuncio">
+                    <h3>Casa de Lujo en el Lago</h3>
+                    <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
+                    <p class="costos">$3,000,0000</p>
 
-	<div class="anuncio">
-		<p><img src="anuncio2.jpg"  width="316" height="210"></p>
-		<b>Casa terminados de Lujo</b>
-		<p>Casa con diseño moderno, asi como tecnologia inteligente y amueblada</p>
-		<p class="costo">$3,000,000</p>
-		<div class="icono-anuncio">
-			<img src="icono_wc.svg" alt="icono_wc">3
-			<img src="icono_estacionamiento.svg" alt="icono_estacionamiento">3
-			<img src="icono_dormitorio.svg" alt="icono_dormitorio">2
-		</div>
-		<p><a href="anuncio.html" class="botones" target="_blank" rel="noreferrer">VER PROPIEDAD</a></p>
-	</div>
+                    <ul class="iconosSecundarios">
+                        <li>
+                            <img src="icono_wc.svg">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="icono_estacionamiento.svg">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="icono_dormitorio.svg">
+                            <p>2</p>
+                        </li>
+                    </ul>
+             <a href="anuncio.html" class="boton color-boton d-block">Ver Propiedad</a>
+            </div>
+        </div>
 
-	<div class="anuncio">
-		<p><img src="anuncio3.jpg" width="316" height="210"></p>
-		<b>Casa con Alberca</b>
-		<p>Casa con alberca y acabados de lujo en la ciudad, excelente oportunidad</p>
-		<p class="costo">$3,000,000</p>
-		<div class="icono-anuncio">
-			<img src="icono_wc.svg" alt="icono_wc">3
-			<img src="icono_estacionamiento.svg" alt="icono_estacionamiento">3
-			<img src="icono_dormitorio.svg" alt="icono_dormitorio">2
-		</div>
-		<p><a href="Anuncio.html" class="botones" target="_blank" rel="noreferrer">VER PROPIEDAD</a></p>
-	</div>
-</div>
-		<p><a href="Anuncios.html" class="botonestodas" target="_blank" rel="noreferrer">VER TODAS</a></p>
-	
+        <div class="anuncio">
+                <img src="anuncio2.jpg">
+            <div class="contenido-anuncio">
+                    <h3>Casa terminados de lujo</h3>
+                    <p>Casa con diseño moderno, así como tecnología inteligente y amueblada</p>
+                    <p class="costos">$2,000,0000</p>
+                    <ul class="iconosSecundarios">
+                        <li>
+                            <img src="icono_wc.svg">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="icono_estacionamiento.svg">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="icono_dormitorio.svg">
+                            <p>2</p>
+                        </li>
+                    </ul>
+             <a href="anuncio.html" class="boton color-boton d-block">Ver Propiedad</a>
+            </div>
+        </div>
+
+        <div class="anuncio">
+                <img src="anuncio3.jpg" alt="Anuncio casa con alberca">
+            <div class="contenido-anuncio">
+                    <h3>Casa con alberca</h3>
+                    <p>Casa con alberca y acabados de lujo en la ciudad, excelente oportunidad</p>
+                    <p class="costos">$3,000,0000</p>
+                    <ul class="iconosSecundarios">
+                        <li>
+                            <img src="icono_wc.svg">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="icono_estacionamiento.svg">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="icono_dormitorio.svg">
+                            <p>2</p>
+                        </li>
+                    </ul>
+
+             <a href="anuncio.html" class="boton color-boton d-block">Ver Propiedad</a>
+            </div>
+        </div>
+        </div>
+
+        <div class="todas">
+            <p><a href="Anuncios.html" class="botonestodas" target="_blank" rel="noreferrer">VER TODAS</a></p>
+        </div>
 	</section>
-
-
-<main>
-		<div class="header2">
+	
+<main class="main">
+		<div class="contenedor header2">
 		<h2>Encuentra la casa de tus sueños</h2>
 		<h3>Llena el formulario de contacto y un asesor se pondrá en contacto contigo a la brevedad</h3>
-		<p><a href="Contactos.html" class="botonmain" target="_blank" rel="noreferrer">Contactanos</a></p>
-	</div>
-</main>
-
-<article>
-
-	<h2 class="fw centrar-texto2">Nuestro Blog</h2>
-	<div class="articulo">
-
-
-	<div class="blog">
-		<img src="blog1.jpg" width="200" height="200">
-		<h3>Terraza en el techo de tu casa</h3>
-		<p>Escrito el: 20/10/2019 por: Admin</p>
-		<p>Consejos para construir una terraza en el techo de tu casa, con los mejores materiales y ahorrando dinero</p>
-	</div>
-
-	<div class="blog">
-		<img src="blog2.jpg" width="200" height="200">
-		<h3>Guia para la decoracion de tu hogar</h3>
-		<p>Escrito el: 20/10/2019 por: Admin</p>
-		<p>Maximiza el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu espacio</p>
-	</div>
-</div>
-</article>
-<div>
-<h2>Testimoniales</h2>
-<header class="testimoniales">
 		
-		<h3>"El personal se comporto de una excelente forma, muy buena atencion y la casa que me ofrecieron cumple con todas mis expectativas -Juan De la Torre</h3>
-</header>
-		<p>Hecho por: Rubi</p></div>
-	
-		<FOOTER>
-		<nav class="navegacionSecundaria">
+	</div>
+	<div class="contenedor header2">
+	<p><a href="Contactos.html" class="botonmain" target="_blank" rel="noreferrer">Contactanos</a></p>
+</div>
+</main>
+<div class="selectarticulo Contenido seccion">
+        <section class="Contenido blog">
+            <h3 class="centrar-texto fw-300">Nuestro Blog</h3>
+
+            <article class="blogs">
+                <div class="imagen">
+                   <img src="blog1.jpg" alt="Entrada de blog">
+                </div>
+                <div class="textoblog">
+                    <a href="entrada.html"  class="titulo-casa-blog">
+                        <h4>Terraza  en el techo de tu casa</h4>
+                        
+                    </a>
+                    <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span> </p>
+                    <p>Consejos para construir una terraza en el techo de tu casa, con los mejores materiales y ahorrando dinero</p>
+                </div>
+            </article>
+
+            <article class="blogs">
+                <div class="imagen">
+                 <img src="blog2.jpg" alt="Entrada de blog">
+                </div>
+                <div class="textoblog">
+                    <a href="entrada.html" class="titulo-casa-blog">
+                        <h4>Guía para la decoración de tu hogar</h4>
+                    </a>
+                    <p>Escrito el: <span> 20/10/2019 </span> por: <span> Admin </span> </p>
+                    <p>Maximiza el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu espacio</p>
+                </div>
+            </article>
+        </section>
+
+        <section class="testimoniales">
+            <h3 class="centrar-texto fw-300">Testimoniales</h3>
+            <div class="secciontestimonial">
+                
+                <blockquote>
+                    <span>" </span>El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron cumple con todas mis expectativas.
+                </blockquote>
+                <p>- Juan De la torre</p>
+            </div>
+        </section>
+
+    </div>
+<footer class="site-footer seccion">
+	<div class="Contenido contenedor-footer">
+		<nav class="navegacion">
 		<a href="Nosotros.html" target="_blank" rel="noreferrer">Nosotros</a>
 
 		<a href="Anuncios.html" target="_blank" rel="noreferrer">Anuncios</a>
 
 		<a href="Blog.html" target="_blank" rel="noreferrer">Blog</a>
 
-		<a href="Contactos.html" target="_blank" rel="noreferrer">Contactos</a>
+        <a href="Contactos.html" target="_blank" rel="noreferrer">Contactos</a>
 		</nav>
-		Todos los derechos reservados &copy;
-	</FOOTER>
-</div>
+		
+		<p class="derechos">Todos los Derechos Reservados 2019 © </p>
+	
+	</div>
+</footer>
 </body>
 </html>
